tests/react_no_jsx_intrinsics/react_no_jsx_intrinsics.exp
Error: test.js:5
  5: <div />;
     ^^^^^^^ Cannot resolve name `React$Element`.

Error: test.js:5
  5: <div />;
     ^^^^^^^ Cannot resolve name `React$Key`.

Error: test.js:5
  5: <div />;
     ^^^^^^^ Cannot resolve name `React$Ref`.

Error: test.js:5
  5: <div />;
      ^^^ Cannot resolve name `$JSXIntrinsics`.


Found 4 errors
